Fixed margin on smaller screen and updated readme

--- a/mobile.css
+++ b/mobile.css
@@ -40,6 +40,9 @@
     .container{
         flex-wrap: wrap;
     }
+    .container div{
+        margin: auto;
+    }
     .container div:hover{
         width: auto;
     }
